fixed headline/list spacing, removed wrong comments
git-svn-id: https://brezn.muc.ccc.de/svn/wikitpl/muc3@44 e88f35d6-7b98-411f-9960-0f0e3b80c3eb

--- a/design.css
+++ b/design.css
@@ -24,7 +24,6 @@ div.dokuwiki pre {
 
 div.dokuwiki p {
   text-align: left;
-//  font-size: 13px;
   line-height: 1.4em;
 }
 
@@ -158,6 +157,7 @@ div.dokuwiki div#draft__status {
 
 div.secedit {
   text-align: right;
+  float: right;
 }
 
 div.secedit input.button {
@@ -195,7 +195,6 @@ div.dokuwiki a:hover {
 }
 div.dokuwiki a:active {
   color: __extern__;
-//  text-decoration: underline;
 }
 
 div.dokuwiki h1 a,
@@ -336,9 +335,8 @@ div.dokuwiki h3,
 div.dokuwiki h4,
 div.dokuwiki h5 {
     color: __text__;
-//    font-size: 100%;
     font-weight: bold;
-    margin: 0 0 1em 0;
+    margin: 1.5em 0 1em 0;
     padding: 2px 0 0 0;
     border-bottom: 1px solid __border__;
     clear: left;
@@ -348,8 +346,8 @@ div.dokuwiki h5 {
 div.dokuwiki h1 {font-size: 160%; margin-left: 0px; }
 div.dokuwiki h2 {font-size: 140%; margin-left: 0px; }
 div.dokuwiki h3 {font-size: 130%; margin-left: 0px; border-bottom: none; }
-div.dokuwiki h4 {font-size: 115%; margin-left: 0px; border-bottom: none; }
-div.dokuwiki h5 {font-size: 100%; margin-left: 0px; border-bottom: none; font-weight: bold;}
+div.dokuwiki h4 {font-size: 115%; margin-left: 0px; border-bottom: none; margin-top: 1em; }
+div.dokuwiki h5 {font-size: 100%; margin-left: 0px; border-bottom: none; font-weight: bold; margin-top: 1em; }
 
 /* indent different sections */
 div.dokuwiki div.level1 {margin-left: 0px;}
@@ -385,7 +383,6 @@ div.dokuwiki blockquote {
 }
 
 div.dokuwiki pre {
-//  font-size: 100%;
   padding: 0.5em;
   border: 1px dashed __border__;
   color: __text__;
